[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mysql>=0.0.3",
    "mysql-connector-python>=9.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dao","src/entity","src/utils","src/exception"]
